--- a/I462A5AF2.opf/meta.yml
+++ b/I462A5AF2.opf/meta.yml
@@ -1,20 +1,18 @@
 id: I462A5AF2
-legacy_id: null
 ocr_import_info:
   bdrc_scan_id: W3CN5438
   source: bdrc
   ocr_info:
     timestamp: '2023-02-01T00:00:00Z'
-  batch_id: batch-0002
+  batch_id: batch-0001
   software_id: norbuketaka
   expected_default_language: bo
   op_import_options: null
 default_language: bo
 source: https://library.bdrc.io
-source_file: null
 initial_creation_type: ocr
-imported: '2023-12-16T17:19:29.157362'
-last_modified: '2023-02-01T00:00:00+00:00'
+imported: 2024-09-12 14:15:57.307800
+last_modified: 2023-02-01 00:00:00+00:00
 parser: https://github.com/OpenPecha/Norbu-Keta-eText-import/blob/main/norbu_ketaka_parser.py
 source_metadata:
   id: http://purl.bdrc.io/resource/W3CN5438
@@ -26,8 +24,6 @@ source_metadata:
   languages:
   - bo
   author: མཁན་པོ་ཚུལ་ཁྲིམས་བློ་གྲོས།
-statistics: null
-quality: null
 bases:
   I3CN5440:
     source_metadata:
@@ -42,5 +38,4 @@ copyright:
   notice: The proofread texts are donated by the Norbu Ketaka project led by Queenie
     Luo (Harvard University), Zhiying Li (Sichuan University) and Leonard van der
     Kuijp (Harvard University). Correspondence should be directed to  queenieluo@g.harvard.edu
-  info_url: null
 license: CC0
